lab1/Test/L1-A-13-18.output
Error Type B at Line 12
Error Type B at Line 13
Error Type A at Line 27
Error Type B at Line 30
Error Type B at Line 52
